<resources>
    <string name="app_name">FaceDog</string>
    <string name="connection_title">Connectez-vous !</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="feed_text">Feed</string>
    <string name="add_text">Ajouter</string>
    <string name="perso_text">Perso</string>
    <string name="confirm">Confirmer le mot de passe</string>
    <string name="register">S\'inscrire</string>
    <string name="no_account">Pas encore de compte ?</string>
    <string name="clickhere">Cliquez ici !</string>
    <string name="signin">Connexion</string>
    <string name="newPostTextView">Nouvelle publication</string>
    <string name="pictureButton">Ajouter une photo</string>
    <string name="titleInputLayout">Titre</string>
    <string name="descriptionInputLayout">Description</string>
    <string name="addTextButton">Publier</string>
    <string name="add_picture_text_view">Ajouter une photo</string>
    <string name="registration_title">Remplissez le formulaire pour vous inscrire</string>
</resources>
